<resources>
    <string name="app_name">SmatVote</string>
    <string name="count_down_to_election_day">Count Down To Election Day</string>
    <string name="next">Next</string>
    <string name="day">Day</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="enter_number_id">Enter number id</string>
</resources>